adding database import nb

--- a/get_iex_data.ipynb
+++ b/get_iex_data.ipynb
@@ -7,7 +7,7 @@
    "outputs": [],
    "source": [
     "import requests\n",
-    "import private_info as pi \n",
+    "import private_info.iex_info as iex \n",
     "import pandas as pd"
    ]
   },
@@ -17,7 +17,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "iex_token = pi.iex_token"
+    "iex_token = iex.iex_token"
    ]
   },
   {
@@ -394,7 +394,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.5"
   },
   "orig_nbformat": 4
  },
