--- a/process_data.ipynb
+++ b/process_data.ipynb
@@ -106,8 +106,17 @@
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "52c035fb8b67b052dd6e2906c4f9d9863b12f63c5bf3c5ef824bd27b191b7f1a"
+  },
+  "kernelspec": {
+   "display_name": "Python 3.9.5 64-bit ('venv': venv)",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "name": "python",
+   "version": "3.9.5"
   },
   "orig_nbformat": 4
  },
