finished most of work on database auto update script

--- a/asset_db_import.ipynb
+++ b/asset_db_import.ipynb
@@ -2,53 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import private_info.db_info as dbi\n",
-    "import mysql.connector\n",
-    "import pymysql\n",
     "import sqlalchemy\n",
+    "import pymysql\n",
     "import os\n",
     "import pandas as pd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# def connect_to_db ():\n",
-    "#     db = mysql.connector.connect(\n",
-    "#         host = dbi.hostname,  \n",
-    "#         user = dbi.username,    \n",
-    "#         password = dbi.password,\n",
-    "#         database = dbi.database,\n",
-    "#         auth_plugin='mysql_native_password'\n",
-    "#     )\n",
-    "\n",
-    "#     print ()\n",
-    "#     print (db)\n",
-    "\n",
-    "#     mycursor = db.cursor()\n",
-    "    \n",
-    "#     return db, mycursor"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# db_con, cur = connect_to_db ()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,14 +33,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<sqlalchemy.engine.base.Connection object at 0x7f825f5b99d0>\n"
+      "<sqlalchemy.engine.base.Connection object at 0x7f1736db3610>\n"
      ]
     }
    ],
@@ -83,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -113,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -137,15 +104,18 @@
     "    \n",
     "    print (t_name)\n",
     "    \n",
-    "    # cmd = f\"CREATE TABLE IF NOT EXISTS {t_name} (product_name text, price number)\"\n",
-    "    \n",
-    "    # cur.execute(cmd)\n",
-    "    # db_con.commit()\n",
-    "    \n",
     "    df.to_sql(t_name, engine, if_exists='fail')\n",
     "    \n",
-    "    result = engine.execute(f\"ALTER TABLE {t_name} DROP COLUMN `Unnamed: 0`;\")\n",
-    "    print (result)\n",
+    "    engine.execute(f\"ALTER TABLE {t_name} DROP COLUMN `Unnamed: 0`;\")\n",
+    "    \n",
+    "    engine.execute(f\"ALTER TABLE {t_name} CHANGE COLUMN `index` `index` BIGINT NULL AUTO_INCREMENT;\")\n",
+    "    \n",
+    "    engine.execute(f\"UPDATE {t_name} SET `index` = 0 WHERE Date = '2010-01-04';\")\n",
+    "    \n",
+    "    engine.execute(f\"ALTER TABLE {t_name} ADD PRIMARY KEY (`index`);\")\n",
+    "    \n",
+    "    engine.execute( f\"ALTER TABLE {t_name} AUTO_INCREMENT = 0;\" )\n",
+    "\n",
     "    "
    ]
   }
