finalized data gathering code

--- a/data_gathering/asset_db_import.ipynb
+++ b/data_gathering/asset_db_import.ipynb
@@ -2,20 +2,23 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import private_info.db_info as dbi\n",
     "import sqlalchemy\n",
-    "import pymysql\n",
+    "# import pymysql\n",
     "import os\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "\n",
+    "import sys\n",
+    "sys.path.append('../')\n",
+    "import private_info.db_info as dbi"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,14 +36,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<sqlalchemy.engine.base.Connection object at 0x7f1736db3610>\n"
+      "<sqlalchemy.engine.base.Connection object at 0x7f9f660c2f40>\n"
      ]
     }
    ],
@@ -50,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,14 +66,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['data/asset/SPY.csv', 'data/gen/fvx.csv', 'data/gen/fed_funds.csv', 'data/gen/tnx.csv', 'data/gen/vix.csv']\n"
+      "['data/asset/IWM.csv', 'data/asset/SPY.csv', 'data/asset/QQQ.csv', 'data/gen/fvx.csv', 'data/gen/fed_funds.csv', 'data/gen/tnx.csv', 'data/gen/vix.csv']\n"
      ]
     }
    ],
@@ -80,18 +83,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "iwm\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Exception during reset or similar\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/home/sdk/RT_ETF_predictor/venv/lib/python3.9/site-packages/sqlalchemy/pool/base.py\", line 739, in _finalize_fairy\n",
+      "    fairy._reset(pool)\n",
+      "  File \"/home/sdk/RT_ETF_predictor/venv/lib/python3.9/site-packages/sqlalchemy/pool/base.py\", line 988, in _reset\n",
+      "    pool._dialect.do_rollback(self)\n",
+      "  File \"/home/sdk/RT_ETF_predictor/venv/lib/python3.9/site-packages/sqlalchemy/engine/default.py\", line 682, in do_rollback\n",
+      "    dbapi_connection.rollback()\n",
+      "  File \"/home/sdk/RT_ETF_predictor/venv/lib/python3.9/site-packages/pymysql/connections.py\", line 480, in rollback\n",
+      "    self._read_ok_packet()\n",
+      "  File \"/home/sdk/RT_ETF_predictor/venv/lib/python3.9/site-packages/pymysql/connections.py\", line 443, in _read_ok_packet\n",
+      "    pkt = self._read_packet()\n",
+      "  File \"/home/sdk/RT_ETF_predictor/venv/lib/python3.9/site-packages/pymysql/connections.py\", line 692, in _read_packet\n",
+      "    packet_header = self._read_bytes(4)\n",
+      "  File \"/home/sdk/RT_ETF_predictor/venv/lib/python3.9/site-packages/pymysql/connections.py\", line 748, in _read_bytes\n",
+      "    raise err.OperationalError(\n",
+      "pymysql.err.OperationalError: (2013, 'Lost connection to MySQL server during query')\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2000-06-01\n",
       "spy\n",
+      "2000-06-01\n",
+      "qqq\n",
+      "2000-06-01\n",
       "fvx\n",
+      "2000-06-01\n",
       "fed_funds\n",
+      "2000-06-01\n",
       "tnx\n",
-      "vix\n"
+      "2000-06-01\n",
+      "vix\n",
+      "2000-06-01\n"
      ]
     }
    ],
@@ -110,7 +158,10 @@
     "    \n",
     "    engine.execute(f\"ALTER TABLE {t_name} CHANGE COLUMN `index` `index` BIGINT NULL AUTO_INCREMENT;\")\n",
     "    \n",
-    "    engine.execute(f\"UPDATE {t_name} SET `index` = 0 WHERE Date = '2010-01-04';\")\n",
+    "    results = engine.execute(f\"SELECT Date FROM {t_name} ORDER BY Date ASC LIMIT 1;\")\n",
+    "    results = results.fetchall()[0][0]\n",
+    "    \n",
+    "    engine.execute(f\"UPDATE {t_name} SET `index` = 0 WHERE Date = \\'{results}\\';\")\n",
     "    \n",
     "    engine.execute(f\"ALTER TABLE {t_name} ADD PRIMARY KEY (`index`);\")\n",
     "    \n",
