created test folder

--- a/data_gathering/get_yahoo_data.ipynb
+++ b/data_gathering/get_yahoo_data.ipynb
@@ -80,8 +80,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "delta = dt.timedelta(1)\n",
-    "temp_date = now - delta\n",
+    "temp_date = now\n",
     "temp_date = str(temp_date)[0:10]\n",
     "\n",
     "\n",
