--- a/data_gathering/asset_db_import.ipynb
+++ b/data_gathering/asset_db_import.ipynb
@@ -43,7 +43,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<sqlalchemy.engine.base.Connection object at 0x7f45185380d0>\n"
+      "<sqlalchemy.engine.base.Connection object at 0x7f9a7808ed90>\n"
      ]
     }
    ],
